ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_29.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-ii-of-christmas\", \"dominica-of-christmas\"]"
expression: s.0
---
2024-12-29
Second Vespers of Dominica II of Christmas:
Vespers:
  Antiphons:   of Christmas
  Psalms:      of Christmas
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
