ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_30.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"day-6-in-the-octave-of-christmas\", \"octave-of-christmas\"]"
expression: s.0
---
2024-12-30
Vespers of Day 6 in the Octave of Christmas:
Vespers:
  Antiphons:   of Christmas
  Psalms:      of Christmas
  Chapter:     of Christmas
  Hymn:        of Christmas
  Verse:       of Christmas
  Magnificat:  of Christmas
  Collect:     of Christmas
