ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_01.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"octave-day-of-the-nativity-of-our-lord-jesus-christ\", \"octave-of-christmas\"]"
expression: s.0
---
2025-01-01
Second Vespers of Octave Day of the Nativity of our Lord Jesus Christ:
Vespers:
  Antiphons:   Proper
  Psalms:      Common of the Blessed Virgin Mary
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
