ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_02.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-v-week-ii-of-christmas\", \"feria-of-christmas\"]"
expression: s.0
---
2025-01-02
Vespers of Feria V week II of Christmas:
Vespers:
  Antiphons:   Ordinary of Christmas (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Christmas (or Psalter)
  Hymn:        Ordinary of Christmas (or Psalter)
  Verse:       Ordinary of Christmas (or Psalter)
  Magnificat:  Ordinary of Christmas (or Psalter)
  Collect:     Ordinary of Christmas (or Psalter)
