ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_05.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"the-epiphany-of-our-lord\"]"
expression: s.0
---
2025-01-05
First Vespers of The Epiphany of our Lord:
Vespers:
  Antiphons:   Proper
  Psalms:      of Sunday (w.116)
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
